# zkml-bootcamp2025Q1-g6b

./: .dockerignore  .gitignore  Dockerfile  nuxt.config.ts  pyproject.toml
.output/: nitro.json
.output/public/: 200.html  404.html  __preview.json  en.html  fr.html  sitemap_index.xml
.output/public/__sitemap__/: en-US.xml  fr-FR.xml
.output/public/_nuxt/: A-xF5idP.js  A7HXRr00.js  B1b8WtEF.js  BCEQcJ85.js  BKYJ_KUu.js  BOGrH799.js  BPnJEF1L.js  Bju8-ee7.js  C2lSVR7n.js  C5T5Uht4.js  C8b_fOZ4.js  CC16z0vC.js  CGzjMWY6.js  CJ-iNn1m.js  CMJxfRpk.js  CN7HwkWP.js  CQ-t-xqr.js  CSyVkYLU.js  CTDeWSCs.js  CVQUKbD0.js  C_Hz4KI5.js  CcDP1jbw.js  CeG3KvVG.js  Cjr-VYgL.js  CobpUBc6.js  CrYPiEuD.js  CsJK9xIW.js  Cv45mkII.js  CyvPdnpj.js  D0Pulijw.js  D0wqBqFV.js  DLeslx7O.js  DOB52mTi.js  DQxQMXtg.js  DV5CZA7z.js  DeZ049Lu.js  DqVcAgMZ.js  Dx60bpLC.js  DyFrpLky.js  Qz999ZP2.js  (+6 more)
.output/public/_nuxt/builds/: latest.json
.output/public/en/: _payload.json  about.html  contact.html  sitemap.xml.html  works.html  writing.html
.output/public/en/about/: _payload.json
.output/public/en/articles/: 5-amazing-raycast-nuxt-snippets.html  launch-your-portfolio.html  not-an-impostor.html
.output/public/en/contact/: _payload.json
.output/public/en/works/: _payload.json
.output/public/fr/: _payload.json  about.html  contact.html  sitemap.xml.html  works.html  writing.html
api/: README.md  main.py  tools.py  zk.py
api/model/: fashion.py  model1.py
app/utils/: useNavigation.ts
content/en/: 1.index.md  10.prove.md  20.verify.md
data/: .gitignore
(+41 files in other folders)
